fix(issues): handles layout issue on click of more in description, fixes tests

--- a/src/app/launcher/create-app/mission-runtime-createapp-step/mission-runtime-createapp-step.component.less
+++ b/src/app/launcher/create-app/mission-runtime-createapp-step/mission-runtime-createapp-step.component.less
@@ -44,6 +44,8 @@
       .list-group-item-text {
         margin-right: 0;
         margin-top: 15px;
+        white-space: unset;
+        font-size: 14px;
       }
     }
   }
@@ -56,6 +58,8 @@
       .list-group-item-text {
         margin-right: 0;
         margin-top: 15px;
+        white-space: unset;
+        font-size: 14px;
       }
     }
   }
